--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "express-ejs-layouts": "^2.5.1",
     "mongoose": "^5.13.7",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "sweetalert2": "^11.1.4"
   },
   "devDependencies": {},
   "repository": {
